<resources>
    <string name="app_name">testApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome Page</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="play_game">Play Game</string>
    <string name="welcome_message">Who\'s turn is it anyway?</string>


    <string name="play">play</string>
    <string name="button_top">Player one</string>
    <string name="button_bottom">Player two</string>

    <string name="name_player_1">Player 1</string>
    <string name="name_player_2">Player 2</string>


</resources>